~changed help and stats icons; ~fixed overflowing issue; ~fixed modal content opacity initial value

--- a/src/index.css
+++ b/src/index.css
@@ -49,6 +49,10 @@
     -moz-osx-font-smoothing: grayscale;
     -webkit-text-size-adjust: 100%;
   }
+  
+  body {
+    overflow: hidden;
+  }
 
   a {
     color: var(--link-color);
